@@ -1,73 +1,81 @@
 package net.conczin.mca.entity.ai.brain.tasks;
 
-import com.google.common.collect.ImmutableMap;
 import net.conczin.mca.entity.VillagerEntityMCA;
+import net.conczin.mca.entity.ai.ActivitiesMCA;
 import net.conczin.mca.entity.ai.MemoryModuleTypeMCA;
+import net.conczin.mca.entity.ai.Mourning;
+import net.minecraft.core.GlobalPos;
 import net.minecraft.server.level.ServerLevel;
 import net.minecraft.world.InteractionHand;
 import net.minecraft.world.entity.ai.behavior.Behavior;
 import net.minecraft.world.entity.ai.behavior.BlockPosTracker;
 import net.minecraft.world.entity.ai.memory.MemoryModuleType;
+import net.minecraft.world.entity.ai.memory.MemoryStatus;
 import net.minecraft.world.item.Item;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.Items;
+
+import java.util.Map;
 
 /** Holds a flower and delivers the mourning dialogue once the villager reaches its assigned grave. */
 public class MournAtGraveTask extends Behavior<VillagerEntityMCA> {
     private static final int MIN_DIALOGUE_DELAY = 100;
     private static final int MAX_DIALOGUE_DELAY = 300;
     private static final int DIALOGUE_COUNT = 3;
+    private static final int SAFETY_CHECK_INTERVAL = 20;
 
     private int remainingDialogues;
     private long nextDialogueTime;
-    private boolean completed;
-    private boolean hasArrived;
+    private long nextSafetyCheckTime;
 
     public MournAtGraveTask() {
-        super(ImmutableMap.of(), Integer.MAX_VALUE - 1);
-    }
-
-    public boolean hasCompleted() {
-        return completed;
-    }
-
-    public boolean hasArrived() {
-        return hasArrived;
+        super(Map.of(
+                MemoryModuleTypeMCA.MOURNING_SITE, MemoryStatus.VALUE_PRESENT,
+                MemoryModuleTypeMCA.MOURNING_POSITION, MemoryStatus.VALUE_PRESENT
+        ), Integer.MAX_VALUE - 1);
     }
 
     @Override
     protected boolean checkExtraStartConditions(ServerLevel world, VillagerEntityMCA villager) {
-        completed = false;
-        hasArrived = false;
-        return EnterGraveyardTask.hasValidMourningTarget(villager);
+        return villager.getBrain().isActive(ActivitiesMCA.GRIEVE)
+                && !Mourning.isTemporarilyBlocked(villager)
+                && !Mourning.isAssignedGraveUnsafe(villager)
+                && EnterGraveyardTask.isAtMourningSite(villager);
     }
 
     @Override
     protected boolean canStillUse(ServerLevel world, VillagerEntityMCA villager, long time) {
-        return hasArrived
-                ? remainingDialogues > 0 && EnterGraveyardTask.isWithinMourningArea(villager)
-                : EnterGraveyardTask.hasValidMourningTarget(villager);
+        if (time >= nextSafetyCheckTime) {
+            nextSafetyCheckTime = time + SAFETY_CHECK_INTERVAL;
+            if (Mourning.isAssignedGraveUnsafe(villager)) {
+                return false;
+            }
+        }
+        return villager.getBrain().isActive(ActivitiesMCA.GRIEVE)
+                && !Mourning.isTemporarilyBlocked(villager)
+                && remainingDialogues > 0
+                && EnterGraveyardTask.isWithinMourningArea(villager);
     }
 
     @Override
     protected void start(ServerLevel world, VillagerEntityMCA villager, long time) {
         remainingDialogues = DIALOGUE_COUNT;
-        villager.setItemInHand(InteractionHand.MAIN_HAND, new ItemStack(getFlower(villager)));
+        if (villager.getBrain().getMemoryInternal(MemoryModuleTypeMCA.MOURNING_PREVIOUS_MAIN_HAND).isEmpty()) {
+            ItemStack previousMainHand = villager.getMainHandItem().copy();
+            ItemStack mourningFlower = new ItemStack(getFlower(villager));
+            villager.getBrain().setMemory(MemoryModuleTypeMCA.MOURNING_PREVIOUS_MAIN_HAND, previousMainHand);
+            villager.getBrain().setMemory(MemoryModuleTypeMCA.MOURNING_FLOWER, mourningFlower.copy());
+            villager.setItemInHand(InteractionHand.MAIN_HAND, mourningFlower);
+        }
+        villager.getBrain().eraseMemory(MemoryModuleType.WALK_TARGET);
+        villager.getNavigation().stop();
+        villager.sendChatToAllAround("villager.grieving");
+        nextDialogueTime = time + getDialogueDelay(villager);
+        nextSafetyCheckTime = time + SAFETY_CHECK_INTERVAL;
     }
 
     @Override
     protected void tick(ServerLevel world, VillagerEntityMCA villager, long time) {
-        if (!hasArrived) {
-            if (!EnterGraveyardTask.isAtMourningSite(villager)) {
-                return;
-            }
-            hasArrived = true;
-            villager.getBrain().eraseMemory(MemoryModuleType.WALK_TARGET);
-            villager.getNavigation().stop();
-            villager.sendChatToAllAround("villager.grieving");
-            nextDialogueTime = time + getDialogueDelay(villager);
-        }
-
         lookAtGrave(villager);
         if (time >= nextDialogueTime) {
             villager.sendChatToAllAround("villager.grieving");
@@ -78,11 +86,33 @@ public class MournAtGraveTask extends Behavior<VillagerEntityMCA> {
 
     @Override
     protected void stop(ServerLevel world, VillagerEntityMCA villager, long time) {
-        completed = hasArrived && remainingDialogues == 0 && EnterGraveyardTask.isWithinMourningArea(villager);
-        villager.getBrain().eraseMemory(MemoryModuleType.WALK_TARGET);
-        villager.getNavigation().stop();
-        villager.setItemInHand(InteractionHand.MAIN_HAND, ItemStack.EMPTY);
-        villager.getBrain().eraseMemory(MemoryModuleType.LOOK_TARGET);
+        boolean completed = remainingDialogues == 0 && EnterGraveyardTask.isWithinMourningArea(villager);
+        restorePreviousHand(villager);
+
+        if (completed || Mourning.isKnownInvalidSite(villager)) {
+            Mourning.finish(villager);
+        } else if (Mourning.isAssignedGraveUnsafe(villager)) {
+            Mourning.deferUnsafe(villager);
+        } else if (Mourning.isTemporarilyBlocked(villager)
+                || !villager.getBrain().isActive(ActivitiesMCA.GRIEVE)) {
+            Mourning.pause(villager);
+        } else {
+            Mourning.retry(villager);
+        }
+    }
+
+    private void restorePreviousHand(VillagerEntityMCA villager) {
+        ItemStack currentMainHand = villager.getMainHandItem();
+        villager.getBrain().getMemoryInternal(MemoryModuleTypeMCA.MOURNING_FLOWER)
+                .filter(mourningFlower -> ItemStack.matches(currentMainHand, mourningFlower))
+                .flatMap(mourningFlower -> villager.getBrain()
+                        .getMemoryInternal(MemoryModuleTypeMCA.MOURNING_PREVIOUS_MAIN_HAND))
+                .ifPresent(previousMainHand -> villager.setItemInHand(
+                        InteractionHand.MAIN_HAND,
+                        previousMainHand.copy()
+                ));
+        villager.getBrain().eraseMemory(MemoryModuleTypeMCA.MOURNING_PREVIOUS_MAIN_HAND);
+        villager.getBrain().eraseMemory(MemoryModuleTypeMCA.MOURNING_FLOWER);
     }
 
     private static int getDialogueDelay(VillagerEntityMCA villager) {
@@ -100,6 +130,14 @@ public class MournAtGraveTask extends Behavior<VillagerEntityMCA> {
 
     private static void lookAtGrave(VillagerEntityMCA villager) {
         villager.getBrain().getMemoryInternal(MemoryModuleTypeMCA.MOURNING_SITE)
-                .ifPresent(grave -> villager.getBrain().setMemory(MemoryModuleType.LOOK_TARGET, new BlockPosTracker(grave)));
+                .filter(site -> site.dimension().equals(villager.level().dimension()))
+                .map(GlobalPos::pos)
+                .filter(grave -> villager.getBrain().getMemoryInternal(MemoryModuleType.LOOK_TARGET)
+                        .filter(target -> target.currentBlockPosition().equals(grave))
+                        .isEmpty())
+                .ifPresent(grave -> villager.getBrain().setMemory(
+                        MemoryModuleType.LOOK_TARGET,
+                        new BlockPosTracker(grave)
+                ));
     }
 }
